--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    font-size: 1rem;
     background: #f5f5f5;
+    color: #121214;
+    font: 1rem 'Helvetica Neve', Arial, sans-serif;
 }
